flussonic (3.69.3)

  * flu_file now has job queue inside it with autostarting workers

flussonic (3.69.2)

  * fixed HDS live broken in 3.69.1, #128, #126, #119
  * enabled batch disk IO in mp4 segment access
  * enabled file requests throttling: return 503 on overloaded files
  * flu_file now autostarts second copy of file is first is overloaded
  * remove mmap because it is useless since R16
  * flu_file now opens file synchronously

flussonic (3.69.1)

  * flu_stream monotonic now passed data directly to sockets
  * flu_rtmp now uses fast RTMP sending path
  * hds_packetizer now doesn't use gop collector
  * fixed playing of HDS streams in admin panel
  * support for intra-refresh streams in DVB-S
  * flu_stream overload protection in publish
  * updated jquery
  * pulse now properly tells segment read speeds
  * dvr_hour_storage now caches blobs content in memory
  * mpegts_handler now also is receiving live via direct socket write
  * fixed mpegts_handler exiting due to auth_refresh message

flussonic (3.68.20)

  * flu_stream message queue length is checked before publish
  * added http event notifiers
  * admin panel now shows live timeshift on dvr enabled streams
  * hls_dvr_writer now checks timeouts and restart delaying writer
  * added protection to flu_file from GOP more than 5000 frames long

flussonic (3.68.19)

  * fix flv problem with pulse and small segments
  * speed up HDS segment generation in 10 times from 15 ms to 1.5 ms
  * fixed descriptor leakage in dvr_hour_storage cleaner

flussonic (3.68.18)

  * don't set GET_PARAMETER is rtsp camera doesn't support it
  * fix graphic layout
  * fix dvr_hour_storage when blob is being deleted
  * show disk and segment traffic in panel

flussonic (3.68.17)

  * graphics in admin panel now using raphael.js
  * fixed sending RTCP RR when no SSRC in Rtp-Info
  * fixed sending RTCP RR on UDP connection
  * fixed RTSP playout

flussonic (3.68.16)

  * fix admin panel playing rtmp files