@@ -1,6 +1,7 @@
 flussonic (3.69.3)
 
   * flu_file now has job queue inside it with autostarting workers
+  * write web requests to /var/log/flussonic/access.log
 
 flussonic (3.69.2)
 
